--- a/contents.tex
+++ b/contents.tex
@@ -77,6 +77,8 @@ Parsivald	&	\multicolumn{2}{X}{Parallel Atomistic Reaction Simulator for Vapor a
 \def\listacronymname{Symbolverzeichnis}
 
 \begin{tabularx}{\linewidth}{ll}
+$E_A$ & Aktivierungsenergie \\
+$p_\text{partial}$ & Partialdruck \\
 \end{tabularx}
 
 %\printglosstex(acr)
