--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -66,6 +66,7 @@ Einzig der Schmelzpunkt wird stark überschätzt (Abbildung \ref{fig:coppertherm
 \end{figure}
 
 \subsection{Prozess-Simulation}
+\label{coppersimulation}
 
 \begin{figure}[hp]
   \captionsetup[subfigure]{singlelinecheck=false}
