--- a/results.tex
+++ b/results.tex
@@ -1,3 +1,4 @@
+\cleardoublepage
 \chapter{Ergebnisse}
 
 Im Verlauf der Erforschung möglicher Prozesse wurden Abscheidungen verschiedener Materialien und Methoden simuliert, die unterschiedliche Aspekte der Präparation, Durchführung und Einschränkungen von Parsivald-simulierten Prozessen demonstrieren.
