--- a/parsivald.tex
+++ b/parsivald.tex
@@ -1,6 +1,7 @@
 \section{Parsivald-Modell}
 \label{sec:parsivald}
 
+\todo[inline]{Habe ich die Zellen schon beschrieben?}
 \subsection{Beschreibung}
 
 Parsivald entstand als damals namenloses Resultat meiner Bachelorarbeit\cite{lorenz_entwicklung_2012} am Fraunhofer ENAS in Chemnitz mit dem Ziel der Atom\-lagen\-abscheidungs-Simulationen mit Beschränkung auf atomistische Simulation von Metall\-oxid-ALD mittels MEAM-Potentialen.
@@ -81,52 +82,10 @@ Für ALD und CVD lässt sich die Abscheidungsrate aus der Reaktionskinetik absch
   \label{fig:parsivald-modes}
 \end{figure}
 
-\subsection{Fortschritt im Rahmen der Masterarbeit}
+\subsection{Annahmen und Einschränkungen}
 
-Seit Beginn dieser Arbeit wurde das Parsivald-Modell von ALD- auf PVD- und CVD-Simu\-lationen erweitert.
-Dies wurde durch zentral verwaltete Konfigurationen ermöglicht, in denen Konfigurations-, Substrat- und Reaktionsdateien (MD-Masken) verschiedener Prozesse verwaltet werden.
-Durch die Prozess-Konfigurationen sind schnelle Prozessentwicklungszyklen möglich, die durch semi-automatische Generierung unterstützt wird.
-Auch eine vollautomatische Prozesserforschung hinsichtlich passender Vorgaben ist mittels des Konfigurationsmechanismus' denkbar.
-
-Zudem wurde das Host-Worker-System von einzelnen Workern auf Workerpools erweitert, die von einem Hauptprozess pro Rechenknoten verwaltet werden.
-Dies verringert den \todo{grausames Wort}Startup-Overhead einzelner Worker zugunsten der Gesamtleistung des Pools.
-In den Hostprozess ist ein ein optionaler, interner Workerpool eingebettet, der durch veränderte Parallelisierungsmechanismen Fehler der MD-Bibliothek sicher abfangen kann (Abschnitt \ref{lammpssucks}).
-
-
-\subsection{Probleme mit LAMMPS}
-\label{lammpssucks}
-
-Der hervorragende LAMMPS-Code wurde als MD-Bibliothek genutzt, da er gut optimiert und auf Funktionsebene in eigene Programme integrierbar ist sowie ReaxFF-Potentiale im Standardformat unterstützt.
-Damit ist LAMMPS die einzige Wahl, allerdings stößt man bei der Nutzung auf verschiedene Probleme.
-
-Ein Hauptproblem besteht in der Interaktion mit MPI.
-So liegt nahe, für hochparallele Systeme wie Parsivald auf bestehende MPI-Bibliotheken zu setzen, um Tasks vom Host an seine Worker zu vermitteln.
-LAMMPS nutzt jedoch intern globale MPI-Calls, auch wenn nur kleine Systeme untersucht werden oder explizit auf MPI verzichtet wird\todo{Beleg!}.
-Dieses Problem lässt sich durch fork-Prozesse oder proprietäre Patches umgehen, kann aber keine Dauerlösung für so komplexe Software wie LAMMPS sein.
-Zwar lässt sich LAMMPS auch mit einem MPI-Stub kompilieren, jedoch führt dieser durch kollidierende Namen globaler Funktionen der notwendigerweise dynamisch verlinkten MPI-Bibliotheken zu Problemen.
-Durch \todo{unverhältnismäßi\-g? wirklich?}unverhältnismäßigen Aufwand ließe sich auch dieses Problem umgehen, allerdings stößt man auch dann auf folgendes Problem.
-
-LAMMPS ruft nach jedem Berechnungsfehler \texttt{exit} auf, wodurch der aktuelle Prozess ohne Möglichkeit der Fehlerkorrektur abgebrochen und die Kommunikation mit dem Hostprozess hart unterbrochen wird.
-Geschieht dies in einer MPI-Umgebung, werden alle beteiligten Prozesse unter Annahme eines kritischen Fehlers beendet.
-LAMMPS ruft jedoch mit hoher Regelmäßigkeit Fehler hervor, beispielsweise bei unerwartetem Übertreten von Systemgrenzen, hohen Teilchengeschwindigkeiten oder Ausnahmesituationen durch fehlgeformte Potentiale.
-Die Lösung gestaltete sich in der Gestaltung eines eigenen Host-Worker-Systemes, das LAMMPS in gekapselten Prozessen lokal oder auf entfernten Knoten laufen lässt und nur die Anfangsbedingungen und Ergebnisse kommuniziert.
-Damit sind bei Abbrüchen die genauen Gründe unbekannt: Aus Sicht des Hostprozesses besteht ein Verbindungsabbruch.
-Die einzige Möglichkeit besteht darin, die MD-Simulation erneut zu starten und bei wiederholtem Abbruch von unzureichenden Anfangsbedingungen auszugehen.
-
-Darüber hinaus fallen einige LAMMPS-Rechnungen unerwartet in eine Dauerschleife, die sich aufgrund der blockierenden Architektur der Bibliothek nicht ohne separaten Überwachungsprozess diagnostizieren oder beenden lässt.
-Hier besteht die Lösung schlicht in einem Timeout für jeden verbundenen Worker, der durch hostseitigen Verbindungsabbruch realisiert wird.
-Nach einer unbestimmten Zeit nach dem Verbindungsabbruch startet sich der Worker anschließend neu.
-Im Worst-Case-Szenario blockieren alle Worker für unbestimmte Zeit, wodurch die Simulation signifikant ausgebremst wird, jedoch weiterhin stabil läuft.
-
-Vom Hostprozess werden für statistische Auswertungen Zähler der erfolgreichen und fehlerhaften MD-Simulationen geführt, mit denen Fehlerraten mit Prozess- und Struktureigenschaften korreliert werden können.
-Eine Anwendung davon befindet sich in Abschnitt \ref{coppersimulation}.
-
-\subsection{something else}
-
-asd
-
-\todo{wozu?}Dazu wird der gesamte Wachstumsprozess in das Auftreffen eines Precursormoleküles oder Atomes und seine Reaktion beziehungsweise physikalische Anlagerung an der Oberfläche getrennt.
-Für alle weiteren Prozesse wurden folgende Annahmen getroffen:
+Trotz der Erweiterung auf CVD und PVD bleibt das Parsivald-Modell auf eine spezielle Klasse von Problemen begrenzt.
+So werden das Auftreffen des Precursors und seine Reaktion mit der Oberfläche \todo{naja, so richtig auch nicht}separat betrachtet, auf eine atomistische Modellierung der Gasphase jedoch verzichtet, wozu folgende Annahmen getroffen werden:
 
 \begin{enumerate}
 \item Alle Reaktionen finden auf der Oberfläche statt
@@ -135,58 +94,48 @@ Für alle weiteren Prozesse wurden folgende Annahmen getroffen:
 \item Bulkdiffusion ist vernachlässigbar
 \end{enumerate}
 
-Reaktionen in der Gasphase sind also ebenso wenig darstellbar wie diffusionsgestützte Prozesse.
-Ohne diese notwendigen Annahmen käme das Parsival-Modell einer reinen Molekular\-dynamik-Simu\-lation gleich.
-Stattdessen werden Reaktionen auf folgende Weise modelliert:
+Unter Vernachlässigung einzelner Annahmen reduzierte sich das Parsivald-Modell auf reine Molekulardynamik und wäre somit auf wenige hunderttausend Teilchen begrenzt.
+Dennoch bleiben Genauigkeit und Umfang der Ergebnisse auf molekulardynamische Methoden begrenzt.
+Somit lassen sich nur Potentialdateien nutzen, die sowohl Bulks als auch Oberflächen simulieren können.
+Werden zusätzlich die Simulation von Molekülen und deren Reaktionen mit der Oberfläche unterstützt, lassen sich die Precursor \todo{theoretisch?}theoretisch direkt betrachten.
+Andernfalls muss der Precursor auf das abzuscheidende Zentralatom reduziert und die sterische Hinderung durch seine Liganden sowie die Suche nach Abscheidungsorten mangels \todo{Begriff}Oberflächenliganden separat behandelt werden.
 
-Auf der Oberfläche des gesamten Simulationsraumes wird zuerst nach einem Ort für eine Precursorreaktion gesucht.
-Dessen Auswahl kann rein zufällig sein, oder aber von der lokalen Nachbarschaft abhängen, beispielsweise über molekulare Gruppen oder Atomdichten.
-Nach dessen Auswahl extrahiert man alle Atome in der unmittelbaren Nachbarschaft und erstellt aus ihnen eine Reaktionszelle für MD-Simulationen.
-Diese Zelle enthält einen Rand fester Atome, dessen Größe wie auch die Größe der Zelle selbst von der Reichweite der genutzten MD-Potentiale abhängt.
-In diese Zelle fügt man je nach Simulationsart, gewünschter Genauigkeit und Fähigkeit der Potentiale das Precursormolekül oder einzelne Atome daraus ein.
-Nach einer erfolgreichen Reaktions- oder Relaxationssimulation fügt man die Atome der Reaktionszelle wieder in die Gesamtstruktur ein und wählt das nächste Oberflächenereignis aus.
+\subsection{Fortschritt im Rahmen der Masterarbeit}
 
-Ergänzend lässt sich durch verschiedene Optimierungen die Laufzeit minimieren.
-Beispielsweise kann man durch Parallelisierung des KMC-Teiles linearen Speedup \todo{Linearer Speedup?} erreichen, der nur durch die Größe des Raumes begrenzt ist.
-Eine Parallelisierung der MD-Simulationen ist hingegen nicht sinnvoll, da bloß kleine Mengen von maximal einigen Tausend Atomen gleichzeitig simuliert werden.
-Andererseits kann man durch oben diskutierte Datenstrukturen die Suche neuer KMC-Ereignisse sowie die Extraktion einer atomaren Nachbarschaft verkürzen.
+\todo[inline]{das ist wohl zu viel}
+Seit Beginn dieser Arbeit wurde das Parsivald-Modell und seine Implementierung um PVD- und CVD-Modi (Abbildung \ref{fig:parsivald-modes}), ein allgemeines Konfigurationsformat\todo{Anhang?}, MD-Befehle mit Platzhaltern (MD-Masken), Unterstützung verschiedener atomistischer Dateiformate, Einbettung der LAMMPS-Umgebungs\-variablen zur Potentialsuche, globale und lokale Suchpfade für alle Eingabedateien, eventgebundene sterische Hinderung zum Zweck der CVD-Simu\-lation, einen internen und beliebig viele externe Workerpools, ein standardisiertes Buildsystem sowie eine Vielzahl externer \todo{ref oder anhang}Werkzeuge zur Prozessvorbereitung und -analyse erweitert.
 
-\todo{fehlt noch was?}
+Diese Änderungen ermöglichen eine einfachere Vorbereitung, Simulation und Erforschung verschiedener Prozesse und Analyse der Ergebnisse.
+Auch eine automatisierte Prozesserforschung hinsichtlich passender Vorgaben ist mittels des Konfigurationsmechanismus' denkbar.
+Zusätzlicher Aufwand musste beim Einkapseln der MD-Bibliothek LAMMPS betrieben werden (Abschnitt \ref{lammpssucks}).
 
-\subsection{Einschränkungen}
+\subsection{Probleme mit LAMMPS}
+\label{lammpssucks}
 
-Neben den durch die oben genannten Annahmen \todo{Referenz} eingeführten gibt es noch eine weitere Einschränkung.
-So lassen sich nur Prozesse und Strukturen betrachten, die auch durch Molekulardynamik darstellbar sind, wobei sich sowohl das Bulk-Material als auch seine Oberfläche simulieren lassen müssen.
-Im optimalen Fall stellen die genutzten MD-Potentiale auch noch Precursor-Oberflächen-Reaktionen verlässlich dar, so dass man auf weitere Annäherungen verzichten kann.
-Darunter fallen die Reduktion des Precursors auf sein Zentralatom, explizite sterische Hinderung sowie eine ausführliche Vorauswahl der Reaktionsorte.
+Der hervorragende LAMMPS-Code wurde als MD-Bibliothek genutzt, da er gut optimiert und auf Funktionsebene in eigene Programme integrierbar ist sowie ReaxFF-Potentiale im Standardformat unterstützt.
+Damit ist LAMMPS die einzige Wahl, allerdings stößt man bei der Nutzung auf verschiedene Probleme.
 
-Falls sich der komplette Precursor oder seine Reaktion mit der Oberfläche nicht durch passende MD-Potentiale darstellen lässt, kann man auf die Abscheidung seines Zentralatomes zurück greifen.
-Obwohl es sich um eine stark vereinfachte Methode einer chemischen Abscheidung handelt, lässt sich so wenigstens das Wachstum der Struktur beobachten.
-Da sich so keine Hinweise auf zurück gebliebene Precursorliganden auf der Oberfläche finden, muss man zusätzlich die sterische Hinderung explizit modellieren, um freies Wachstum zu verhindern.
+Ein Hauptproblem besteht in der Interaktion mit MPI-Bibliotheken.
+So liegt nahe, für hochparallele Systeme wie Parsivald auf MPI zu setzen, um Tasks vom Host an seine Worker zu vermitteln.
+LAMMPS nutzt jedoch intern globale MPI-Calls, auch wenn nur kleine Systeme untersucht werden oder explizit auf MPI verzichtet wird\todo{Beleg!}.
+Dieses Problem lässt sich durch fork-Prozesse oder proprietäre Patches umgehen, ist aber keine zufriedenstellende, sichere Lösung für umfangreiche Software.
+Zwar lässt sich LAMMPS auch mit einem MPI-Stub kompilieren, jedoch führt dieser durch kollidierende Namen globaler Funktionen der notwendigerweise dynamisch verlinkten MPI-Bibliotheken unweigerlich zu Problemen.
+Auch nach Lösung dieses Problemes käme MPI in Konflikt mit dem nächsten Problem.
 
-\missingfigure{steric-hindrance}
+LAMMPS ruft nach jedem Berechnungsfehler \texttt{exit} auf, wodurch der aktuelle Prozess ohne Möglichkeit der Fehlerkorrektur beendet und die Kommunikation mit dem Hostprozess hart unterbrochen wird.
+Geschieht dies in einem MPI-Prozess, werden alle beteiligten Prozesse auf allen Knoten unter Annahme eines kritischen Fehlers beendet.
+Unerwartetes Übertreten von Systemgrenzen, hohen Teilchengeschwindigkeiten oder Ausnahmesituationen durch fehlgeformte Potentiale verursachen nun regelmäßig und unvorhergesehen \texttt{exit}-Calls und beenden ungewollt die gesamte Simulation.
+Eine mögliche Lösung wäre die Nutzung von Prozess-Forks, die vom eigentlichen MPI-Prozess überwacht werden, wie es in Workerpool der Fall ist.
 
-Sterische Hinderung verhindert normalerweise durch die lokale Oberflächendichte von Precursorliganden eine weitere Anlagerung von Precursormolekülen bei chemischen Abscheidungen, bis diese Liganden wieder von der Oberfläche entfernt wurden.
-Als Ersatz wird eine kugelförmige Zone definiert, innerhalb derer weitere Precursorreaktionen auf der Oberfläche ausgeschlossen sind, bis der nächste Prozessschritt gestartet wurde.
-Als entsprechender Parameter steht nun jedem möglichen Abscheidungsereignis der Radius dieser Kugel zur Verfügung.
-Diese Methode ignoriert Feinheiten wie die genaue Anzahl an verbliebenen Precursorliganden, stellt jedoch eine gute\todo{wirklich gut?} Näherung dar.
+Darüber hinaus fallen einige Rechnungen unerwartet in eine Dauerschleife innerhalb der LAMMPS-Bibliothek, die sich aufgrund deren blockierender Architektur nicht ohne separaten Überwachungsprozess diagnostizieren oder beenden lässt.
+Hier besteht die Lösung schlicht in einem hostseitigen Timeout der Verbindung zu jedem verbundenen Worker.
+Eine unbestimmte Zeit nach dem Verbindungsabbruch startet sich der Worker selbsttätig neu.
+Im Worst-Case-Szenario endet ein Großteil der Worker in Dauerschleifen, wodurch die Simulation signifikant ausgebremst wird, jedoch weiterhin stabil läuft.
 
-\subsection{Implementierung}
+Als Lösung der vorgestellten Probleme wurde ein eigenes Host-Worker-System gestaltet, das LAMMPS in gekapselten Prozessen lokal oder auf entfernten Knoten laufen lässt, aber nur die Anfangsbedingungen und Ergebnisse kommuniziert.
+Worker werden in Pools organisiert, sind ansonsten aber unabhängig, was sich in der direkten Nutzung des Netzwerkstacks ohne Umweg über den Poolmanagement-Prozess zeigt.
+Auf der einen Seite ist die Stabilität der Worker unabhängig von anderen Workern, andererseits bleiben die eigentlichen Fehlerursachen weiterhin verborgen.
+Stattdessen werden fehlgeschlagene MD-Simulationen erneut gestartet und bei wiederholtem Berechnungsfehler als fehlgeschlagen markiert und verworfen.
 
-Das Parsivald-Modell wurde ursprünglich im Rahmen meiner Bachelorarbeit \todo{Referenz} in Software umgesetzt.
-Seither wurden verschiedene Funktionen ergänzt, wie beispielsweise Erleichterungen im Prozessdesign sowie der separate PVD-Modus.
-Auch einfachere Möglichkeiten, eine bestimmte Zahl an Worker-Prozessen zu starten, vereinfacht die Nutzung der Software auf größeren Clustersystemen.
-
-Grundlage der Implementierung bieten hauptsächlich die beiden Bibliotheken libenskmc sowie LAMMPS für KMC und MD, wobei libenskmc aus eigener Entwicklung stammt.
-Man hätte an dieser Stelle auch die SPPARKS-Bibliothek für KMC-Simulationen einbinden können, die von den selben Autoren der LAMMPS-Bibliothek stammt.
-Es hat sich jedoch heraus gestellt, dass SPPARKS nur unter großem Aufwand das Parsivald-Modell handhaben könnte, was vor allem in Hinblick auf häufige kritische Abbrüche der LAMMPS-Bibliothek nicht vertretbar war.
-
-Auf eigenen Code wurde bei folgenden Systemen gesetzt:
-Das Host-Worker-System mit angebundenen Netzwerk-Code musste geschrieben werden, da LAMMPS die Nutzung einer MPI-Bibliothek unterbindet.
-Die Octrees zum räumlichen Binning wurden eng mit libenskmc verzahnt, weshalb auf eine externe Geometrie-Bibliothek verzichtet wurde.
-DUMP-Substrate werden aufgrund der klaren Format-Definition durch eigenen Code eingelesen.
-Ebenso erfolgt die Ausgabe der .xyz-Dateien über eigenen Code.
-Im Gegensatz dazu werden .lmp-Substrate jedoch über lmpio eingelesen, einer IO-Bibliothek für .lmp-Dateien, die im Hintergrund LAMMPS nutzt, um Kompatibilität mit der Vielzahl an uneindeutigen Atomeigenschaften zu garantieren.
-Um Konformität zwischen Kommandozeilenargumenten und Konfigurationsdateien zu garantieren, wurde auf die ArgumentParser-Bibliothek zurück gegriffen, die aus eigener Feder entstammt und in weiteren externen Projekten Verwendung findet.
-Die Abhängigkeitsauflösung bei KMC-Ereignissen entstammt ebenfalls der eigenen Feder, ebenso wie der sonstige Binding Code zwischen LAMMPS und libenskmc, inklusive beider Parallelisierung-Codes (Threads und losgelöste Unterprozesse).
-
+Vom Hostprozess werden für statistische Auswertungen Zähler der erfolgreichen und fehlerhaften MD-Simulationen geführt, mit denen Fehlerraten mit Prozess- und Struktureigenschaften korreliert werden können.
+Eine Anwendung davon befindet sich in Abbildung \ref{fig:copperparsivald}.
