--- a/depositions.tex
+++ b/depositions.tex
@@ -76,7 +76,7 @@ Tabellen \ref{tab:deposition-comparison} und \ref{tab:deposition-materials} stel
 
 PVD ist kontinuierlich und nicht reaktiv, arbeitet also mit Atomen oder Molekülen, die physikalisch auf der Oberfläche adsorbieren.
 Beispielsweise werden beim Sputtering durch energiereiche Partikel (Argon-Plasma) einzelne Atome aus dem sogenannten Target geschlagen, die dann auf dem Substrat eine homogene, dünne Schicht bilden.
-Durch die Nutzung mehrerer Targets (Cosputtering) oder mehrerer Atomsorten in einem Target lassen sich auch Legierungen und andere mehrelementige Materialien abscheiden.
+Durch die Nutzung mehrerer Targets (Co\-sputtering) oder mehrerer Atomsorten in einem Target lassen sich auch Legierungen und andere \todo{wort!}mehrelementige Materialien abscheiden.
 \todo{Referenzen für alles}
 
 \subsection{Chemische Gasphasenabscheidung}
@@ -117,7 +117,7 @@ Eine ausführlichere Übersicht zu Atomlagenabscheidung und mögliche Precursorp
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\textwidth]{sterichindrance}
+  \includegraphics[width=0.5\textwidth]{sterichindrance_noalpha}
   \caption[Sterische Hinderung]{Sterische Hinderung auf einem Gitter:
     Angelagerte Precursor-Liganden verhindern Reaktionen auf benachbarten Gitterpunkten.
     Überlagerungsfreie Positionen in größerem Abstand akzeptieren weiterhin Precursor-Reaktionen.
