--- a/einleitung.tex
+++ b/einleitung.tex
@@ -2,3 +2,15 @@
 \chapter{Einleitung}
 \label{cha:einleitung}
 
+\todo[inline]{Moore's Law? ... naja...}
+\todo[inline]{MOSFET-Dielektrika}
+\todo[inline]{Passivation Layers}
+\todo[inline]{Diffusionsbarrieren}
+\todo[inline]{Hauptsächlich experimentelle Aussagen}
+\todo[inline]{DFT: zu klein, nur einzelne Atome}
+\todo[inline]{MD:immer noch auf atomistischer Skala}
+\todo[inline]{KMC: Gitterbasiert}
+\todo[inline]{Raten-/GPC-Vorhersagen}
+\todo[inline]{ungesättigte Zyklen}
+\todo[inline]{Substrateinfluss}
+\todo[inline]{Erforschung neuer Materialien mit atomistischer Genauigkeit}
