--- a/parsivald.tex
+++ b/parsivald.tex
@@ -1,7 +1,7 @@
 \section{Parsivald-Modell}
 \label{sec:parsivald}
 
-\todo[inline]{Habe ich die Zellen schon beschrieben?}
+\todo[inline]{Soll ich die Zellen beschrieben?}
 \subsection{Beschreibung}
 
 Parsivald entstand als damals namenloses Resultat meiner Bachelorarbeit\cite{lorenz_entwicklung_2012} am Fraunhofer ENAS in Chemnitz mit dem Ziel der Atom\-lagen\-abscheidungs-Simulationen mit Beschränkung auf atomistische Simulation von Metall\-oxid-ALD mittels MEAM-Potentialen.
