roadmap added, internal structure slightly modified

--- a/metadaten.tex
+++ b/metadaten.tex
@@ -28,9 +28,9 @@
 \newcommand{\dcdepartfirst}{Fakultät für Elektrotechnik und Informationstechnik} % Fakultätsangabe
 \newcommand{\dcproffirst}{Technologien der Nanoelektronik} % Angabe der Professur
 
-\newcommand{\dcexaminersecond}{N.N.}
-\newcommand{\dcdepartsecond}{\dcdepart} % Fakultätsangabe
-\newcommand{\dcprofsecond}{N.N.} % Angabe der Professur
+\newcommand{\dcexaminersecond}{Prof. Dr. Karl Heinz Hoffmann}
+\newcommand{\dcdepartsecond}{Fakultät für Physik} % Fakultätsangabe
+\newcommand{\dcprofsecond}{Theoretische Physik, insbesondere Computerphysik} % Angabe der Professur
 \newcommand{\dcinstitutesecond}{\dcinstitute}
 
 \newcommand{\dcadvisor}{Dr. Jörg Schuster}
