--- a/results.tex
+++ b/results.tex
@@ -5,15 +5,15 @@ Im Verlauf der Erforschung möglicher Prozesse wurden Abscheidungen verschiedene
 
 Abschnitt \ref{goldpvd} zeigt allgemeine Vorbetrachtungen eines Potentiales und seiner MD-Parameter sowie die Nutzung strukturierter Substrate anhand von Gold-PVD.
 Im darauf folgenden Abschnitt \ref{copperpvd} werden verschiedene Potentiale auf die Anwendbarkeit auf Kupfer-PVD überprüft.
-Silizium-PVD stellt anschließend Probleme mit amorphen Materialien in Abschnitt \ref{siliconpvd} dar.
+Per PVD abgeschiedene Multilagensysteme stehen in Abschnitt \ref{multilayer} \todo{phrasing}zur Untersuchung.
+Silizium-PVD stellt abschließend Probleme mit amorphen Materialien in Abschnitt \ref{siliconpvd} dar.
 %% Abschnitt \ref{silicacvd} demonstriert binäre Abscheidungssysteme anhand von Siliziumoxid-CVD.
-Schließlich wird in Abschnitt \ref{aluminaald} ein ALD-Prozess anhand des TMA-\ce{H2O}-Prozesses untersucht.
-\todo[inline]{Multilagen-Systeme}
+%% Schließlich wird in Abschnitt \ref{aluminaald} ein ALD-Prozess anhand des TMA-\ce{H2O}-Prozesses untersucht.
 
 \input{goldpvd}
 \clearpage
 \input{copperpvd}
 \clearpage
-\input{siliconpvd}
+\input{multilayer}
 \clearpage
-\input{aluminaald}
+\input{siliconpvd}
