--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -1,4 +1,4 @@
-\section{Silizium-PVD und Silica-CVD}
+\section{Silizium-PVD und Siliziumoxid-CVD}
 \label{siliconpvd}
 
 Anhand von Silizium-PVD sollen einerseits amorphe Schichten abgeschieden, andererseits zum \ce{SiH4}-\ce{O2}-CVD-Prozess hingeführt werden.
