restructuring and first comments and stuff

--- a/TODO
+++ b/TODO
@@ -15,5 +15,8 @@
 * 4.5 Al2O3 FUCK! sein lassen
 * 5 Zusammenfassung aus den Fingern saugen
 
-[IMPORTANT]
+[JOERG]
 * Jörgs Bemerkungen einarbeiten
+* mehr sprachliche Vielfalt
+* Erläuterungen am Anfang der Kapitel
+* Rest fertigmachen, dann Datenstrukturen kürzen
